fix(user-service): change 'String.format' to '.formatted'